2013-03-31  Raymond Penners  <raymond.penners@intenct.nl>

	* Python 3 is now supported!

2013-03-28  Raymond Penners  <raymond.penners@intenct.nl>

	* Dropped dependency on (unmaintained?) oauth2 package, in favor
	of requests-oauthlib.

2013-03-13  Raymond Penners  <raymond.penners@intenct.nl>

	* account: E-mail confirmation mails generated at signup can now
	be differentiated from regular e-mail confirmation mails by
	placing e.g. a welcome message into the
	`account/email/email_confirmation_signup*` templates. Thanks to
	Sam Solomon for the patch.

	* account: Moved User instance creation to adapter so that e.g.
	username generation can be influenced. Thanks to John Bazik for
	the patch.

2013-03-08  Raymond Penners  <raymond.penners@intenct.nl>

	* Robert Balfre contributed Dropbox support, thanks!

2013-02-19  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added support for Weibo.

2013-02-15  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added support for sending HTML e-mail. Add
	"*_message.html" templates and they will be automatically picked
	up.

2013-02-13  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: The refresh token and token expiry time, if any,
	are now stored in `SocialToken`.

	* Added support for passing along extra parameters to the OAuth2
	authentication calls, such as `access_type` (Google) or
	`auth_type` (Facebook).

2013-02-12  Raymond Penners  <raymond.penners@intenct.nl>

	* Both the login and signup view now immediately redirect to the
	login redirect url in case the user was already authenticated.

2013-02-11  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for closing down signups in a pluggable fashion,
	making it easy to hookup your own invitation handling mechanism.

2013-02-09  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for passing along extra parameters to the
	`FB.login` API call.

2013-01-30  Raymond Penners  <raymond.penners@intenct.nl>
