@@ -1,3 +1,5 @@
+from django.core.urlresolvers import reverse
+
 from allauth.utils import (import_attribute,
                            get_user_model,
                            valid_email_or_none)
@@ -45,6 +47,14 @@ class DefaultSocialAccountAdapter(object):
         user.last_name = last_name or name_parts[2]
         return user
 
+    def get_connect_redirect_url(self, request, socialacount):
+        """
+        Returns the default URL to redirect to after successfully
+        connecting a social account.
+        """
+        assert request.user.is_authenticated()
+        url = reverse('socialaccount_connections')
+        return url
 
 
 def get_adapter():
